# empress

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
crates/xtask-build-man/: Cargo.toml
crates/xtask-build-man/src/: main.rs
etc/: club.bnuy.Empress.service.in  empress.service.in  net.ryan_s.Empress1.service.in  net.ryan_s.Empress2.service.in  now-playing-syntax.man  now_playing_long.txt
scripts/: install-services.sh  test.sh
src/: client.rs  interface.xml  main.rs  opts.rs  server.rs  timeout.rs
src/_server/: mod.rs  player.rs  player_map.rs
src/client/: mod.rs  now_playing.rs  proxy.rs
src/format/: ast.rs  ffi.rs  functions.rs  interp.rs  lexer.rs  mod.rs  parser.lalrpop
src/interface/: mod.rs  mpris.rs
src/server/: handler.rs  interface.rs  mod.rs  mpris.rs  player.rs  player_map.rs  position.rs  server.rs  signal_matcher.rs
src/server/player_map/: dead_names.rs  key_guard.rs
