[package]
name = "empress"
version = "3.0.0-alpha.4"
authors = ["raykast <me@june-s.net>"]
edition = "2021"
description = "A D-Bus MPRIS daemon for controlling media players."
documentation = "https://docs.rs/empress"
readme = "README.md"
repository = "https://github.com/ray-kast/empress"
license = "AGPL-3.0-or-later"
keywords = ["mpris", "music", "play", "pause", "skip"]
categories = ["command-line-utilities", "multimedia", "os"]

build = "build.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["cargo", "derive", "wrap_help"] }
dispose = "0.5.1"
env_logger = "0.11.5"
futures-util = "0.3.31"
jiff = { version = "0.1.14", features = ["logging", "serde"] }
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
log = "0.4.22"
nom = "7.1.3"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
spin = "0.9.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
zbus = { version = "5.0.1", default-features = false, features = ["tokio"] }

[dependencies.tokio]
version = "1.41.0"
features = [
  "macros",
  "net",
  "parking_lot",
  "rt",
  "signal",
  "sync",
  "time",
]

[build-dependencies]
lalrpop = "0.22.0"
