[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["raykast <me@june-s.net>"]
version = "3.0.1"
edition = "2021"
repository = "https://github.com/ray-kast/empress"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive", "wrap_help"] }

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
disallowed_methods = "deny"
suspicious = "deny"
style = "deny"
clone_on_ref_ptr = "deny"
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[package]
name = "empress"
description = "A D-Bus MPRIS daemon for controlling media players."
authors.workspace = true
version.workspace = true
edition.workspace = true
documentation = "https://docs.rs/empress"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["mpris", "music", "play", "pause", "skip"]
categories = ["command-line-utilities", "multimedia", "os"]

build = "build.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
clap.workspace = true
dispose = "0.5.1"
env_logger = "0.11.5"
futures-util = "0.3.31"
jiff = { version = "0.1.14", features = ["logging", "serde"] }
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
log = "0.4.22"
nom = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
spin = "0.9.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
unicode-ident = "1.0.16"
zbus = { version = "5.0.1", default-features = false, features = ["tokio"] }

[dependencies.tokio]
version = "1.41.0"
features = [
  "macros",
  "net",
  "parking_lot",
  "rt",
  "signal",
  "sync",
  "time",
]

[build-dependencies]
lalrpop = "0.22.0"

[lints]
workspace = true
